Issue 12339: Fixed. Added statement for delete from useradmin_role_crossref table
git-svn-id: https://svn.imcode.com/imcode/imcms/branches/RB-4@26732 bd66a97b-2aff-0310-9095-89ca5cabf5a6